@@ -1,3 +1,8 @@
+2010-06-01  Pierre Muller  <muller@ics.u-strasbg.fr>
+
+	* dwarf2read.c (read_func_scope): Do not complain for
+	external function if bounds are not found.
+
 2010-06-01  Pedro Alves  <pedro@codesourcery.com>
 
 	* NEWS: Mention gdbserver fast tracepoints support.
